# AtlanticPhoto

./: .env  .gitignore  .readthedocs.yml  Dockerfile  LICENSE  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
migration/versions/: 779e2a53833a_init_sb_mig.py
migrations/: env.py
migrations/versions/: 00984a3a63a3_2302_ending_05.py  02d13191d0a1_trans_nul.py  05228b7c7fd0_2302_ending_15.py  0eb87ac28481_2302_ending_04.py  0f2822f483b2_2302_ending_13.py  0f9ac0a9baaa_2802_ending_deploy.py  156baee6ba7e_tagsmigration02.py  1a000bc3e423_additionaltask.py  1fb22ea9ecd0_test.py  21f16d754167_second.py  238a68f0bdce_init.py  41ab3a491b10_2302_ending_09.py  453e47e43543_2302_ending_14.py  4b366051ef76_tagsmigration04.py  4faf6c5e8cb6_tagsmigration03.py  545f9fa76dc4_2402_ending_02.py  55f1e40e1e63_init.py  5c3ffefec0da_additionaltask3.py  5eea53e81514_2302_ending_02.py  61be8d6904e2_2502_ending_00.py  62573d4bc2b6_additionaltask.py  644e7d812317_2302_ending_11.py  6a080abed9e2_additionaltask2.py  6b289c511e37_final.py  6b3ac788f00c_third.py  72d9fa6201ea_2302_ending_06.py  756003e52115_images.py  89d07293ef16_tagsmigration01.py  8bca8b3be160_2202_new.py  985e663da5a5_tags_users.py  a3cb4213bebf_2202_new_comments.py  a4b166dbfcf5_sikan.py  ae022751a1bf_additionaltask1.py  b39cf9a8d034_2302_ending_12.py  b4ec65d341e2_init.py  b6c1f01b0e31_2302_ending_03.py  c82036abe841_2302_ending.py  c8687212ab82_2302_ending_08.py  d2cdb0fb5e2d_2302_ending_01.py  d9e5391833f2_fourth.py  (+6 more)
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619  2619_vm  2696  2840  2841  pg_internal.init
postgres-data/base/5/: 1247  1249  1249_fsm  1259  16392  16395  16405  16411  16412  16414  16415  16416  16418  16421  16427  16428  16429  16433  16434  16436  16438  16443  16448  16450  16451  16456  16458  16460  16465  16470  16474  16480  16481  16482  16496  16502  16503  2224  2579  2604  (+31 more)
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
postgres-data/pg_xact/: 0000
src/: front.rar
src/conf/: config.py  messages.py
src/entity/: models.py
src/front/: index.html  script.js
src/repository/: __init__.py  comments.py  images.py  tags.py  transform.py  users.py
src/routes/: __init__.py  auth.py  comments.py  images.py  tags.py  transform.py  users.py
src/schemas/: __init__.py  comment.py  images.py  tags.py  transform.py  users.py
src/services/: auth.py  cloudconnect.py  roles.py
src/templates/: index.html
src/templates/js/: script.js
src/tests/: conftest.py  test_repository_comments.py  test_repository_images.py  test_repository_tags.py  test_repository_transform.py  test_repository_users.py
templates/css/: style.css
