[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["Sikan777 <sikanbog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
python-multipart = "^0.0.9"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
fastapi-mail = "^1.4.1"
redis = "^5.0.1"
fastapi-limiter = "^0.1.6"
libgravatar = "^1.0.4"
qrcode = "^7.4.2"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
