[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["Sikan777 <sikanbog@gmail.com>", "Zeynon <zeinabkhalilova@gmail.com>", "Olga Tsuban <tsubanolga@gmail.com>",
        "hedgyv <hedgy85@icloud.com>", "Artem650 <utah954@gmail.com>", ]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
python-multipart = "^0.0.9"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
fastapi-mail = "^1.4.1"
redis = "^5.0.1"
fastapi-limiter = "^0.1.6"
libgravatar = "^1.0.4"
qrcode = "^7.4.2"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cloudinary = "^1.38.0"
pydantic = {extras = ["email"], version = "^2.6.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
greenlet = "^3.0.3"
setuptools = "^69.1.0"
requests = "^2.31.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = "ignore::DeprecationWarning"